--- a/od/Montemedia/index.html
+++ b/od/Montemedia/index.html
@@ -24,10 +24,9 @@
 </head>
 
 <body>
-    <div id="seitentitel"><h2>Open Data - Montemedia</h2></div>
     <div id="content">
         <div id="navi">
-            Select Device Properties:<br>
+            Pleas select device properties:<br>
             <div id="inputBoxes"></div>
             <div id="expl">
                 Legend: 
@@ -38,11 +37,11 @@
                     <span>|<p></p></span>
                     <span>|<p></p></span>
                     <span class="text"><p></p></span>
-                    
             </div>
             
         </div>
         <div id="databox">
+            <h2 id="seitentitel">Open Data - Montemedia</h2>
             <a onclick="printData(this)" id="schweiz" name="Schweiz" class="canton">Show Swiss Data</a>
             <h3 id="titel"></h3>
             <div id="tabs">
@@ -90,8 +89,8 @@
         <div onclick="switchShowInfo()" id="info">
             <div>
                 <h3>Data Info</h3>
-                <p>The presented data is from <a href="http://www.montemedia.com/" target="_blank">Montemedia</a>. 
-                It represents the Customer form Montemedia and shows what kind of devices the customers uses in wich region of Switzerland</p>
+                <p>The presented data was collected by <a href="http://www.montemedia.com/" target="_blank">Montemedia</a>. 
+                It shows the amount of device, belonging properties and the corresponding region of users who visited websites tracked by Montemedia</p>
                 <p>&copy; 2014 - S&eacute;bastien Broggi & Lukas Riesen</p>
             </div>
         </div>
