--- a/od/Montemedia/index.html
+++ b/od/Montemedia/index.html
@@ -89,8 +89,8 @@
         <div onclick="switchShowInfo()" id="info">
             <div>
                 <h3>Data Info</h3>
-                <p>The presented data was collected by <a href="http://www.montemedia.com/" target="_blank">Montemedia</a>. 
-                It shows the amount of device, belonging properties and the corresponding region of users who visited websites tracked by Montemedia</p>
+                <p>The presented data was collected by <a href="http://www.montemedia.com/" target="_blank">Montemedia</a>.
+                It shows the amount of devices, belonging properties and corresponding region of users who visited websites tracked by Montemedia.</p>
                 <p>&copy; 2014 - S&eacute;bastien Broggi & Lukas Riesen</p>
             </div>
         </div>
